package ar.edu.itba.models;

import java.io.Serializable;

public enum FlightStatus implements Serializable {
    PENDING,
    CONFIRMED,
    CANCELLED
}
